traefik/forward-auth/traefik-forward-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-sso
  labels:
    app: traefik-sso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-sso
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: traefik-sso
        app: traefik-sso
    spec:
      containers:
        - name: traefik-sso
          image: thomseddon/traefik-forward-auth:2
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
          imagePullPolicy: Always
          ports:
            - containerPort: 4181
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-sso
spec:
  selector:
    app: traefik-sso
  ports:
    - protocol: TCP
      port: 4181
      targetPort: 4181
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: sso
spec:
  forwardAuth:
    address: http://traefik-sso:4181
    authResponseHeaders:
        - "X-Forwarded-User"
    trustForwardHeader: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-sso
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.wiseapp.xyz`)
      kind: Rule
  services:
    - name: traefik-sso
      port: 4181
  middlewares:
      - name: traefik-sso@kubernetescrd
  tls:
    secretName: traefik-sso-tls
