traefik/forward-auth/whoami2.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: whoami2
  labels:
    app: whoami2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami2
  template:
    metadata:
      labels:
        app: whoami2
    spec:
      containers:
        - name: whoami2
          image: containous/whoami
          ports:
            - name: web
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami2
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami2

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami2
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami2.wiseapp.xyz`)
      kind: Rule
      services:
        - name: whoami2
          port: 80
      middlewares:
        - name: traefik-sso
  tls:
    secretName: whoami2-tls
